==> nonameforgood/gj/src/gj/gjbleserver_nordic.cpp <==
#include "gjbleserver.h"
#include "gj/esputils.h"
#include "gj/serial.h"
#include "gj/commands.h"
#include "gj/config.h"
#include "gj/datetime.h"
#include "gj/eventmanager.h"
#include "gj/gjota.h"
#include "gj/nrf51utils.h"
#include <cctype>  //isprint
  #include <fstorage.h>
  #include "softdevice_handler.h"
  #include <nrf_fstorage.h>
  #include <nrf_sdh.h>
  #include <nrf_sdh_ble.h>
#include <boards.h>
#include <ble.h>
#include <ble_hci.h>
#include <ble_srv_common.h>
#include <ble_advdata.h>
#include <ble_advertising.h>
#include <ble_conn_params.h>
#include <ble_hci.h>
#include <ble_advdata.h>
#include <ble_advertising.h>
#include <ble_conn_state.h>
#include <app_util_platform.h>
#define NRF_EVENT_STRING(cat, id) {cat##_##id, #cat, #id}

void GJBLEServer::RegisterTerminalHandler()
{
  if (m_terminalIndex == -1)
  {
    auto handleTerminal = [&](const char *text)
    {
      Broadcast(text);
    };

    auto handleTerminalReady = [&]() -> bool
    {
      return this->CanSendData();
    };
    
    m_terminalIndex = AddTerminalHandler(handleTerminal, handleTerminalReady);
  }
}

void GJBLEServer::OnNewClient(BLEClient *client)
{
  GJ_DEBUGLOC("GJBLEServer::OnNewClient");
  #ifdef ESP32
  {
    unsigned char data[256];

    for (int i = 0 ; i < 256 ; ++i)
      data[i] = (uint8_t)i;

    uint32_t crc = ComputeCrcDebug(data, 256);
    uint32_t crc2 = ComputeCrcDebug(data, 128);
    crc2 = ComputeCrcDebug(&data[128], 128, crc2);
    BLE_DBG_PRINT(4, "test crc:%u crc2:%u\n", crc, crc2);
  }
  #endif
  m_clients.push_back(client);  
}

bool GJBLEServer::Init(const char *hostname, GJOTA *ota)
{
  m_hostname = hostname;
  m_ota = ota;

  return Init();
}

bool GJBLEServer::Init()
{
  RegisterTerminalHandler();

  REFERENCE_COMMAND(ble);
  
  if (!m_oneTimeInit)
  {
    m_oneTimeInit = true;

    /*auto exitCB = [this]()
    {
      if (ms_instance)
        ms_instance->Term();
    };*/

    RegisterExitCallback(OnExit);
/*
    auto broadWSLog = [=](const char *buffer)
    {
      this->Broadcast(buffer);
    };

    auto sendWBLog = [=]()
    {
      //SendRecentLog(broadWSLog);
    };
*/
    //REFERENCE_COMMAND("blesendlog", sendWBLog);
  }


  if (!m_init)
  {
    uint32_t err_code;

    InitSoftDevice();
    
    ble_enable_params_t ble_enable_params;
    err_code = softdevice_enable_get_default_config(CENTRAL_LINK_COUNT,
                                                    PERIPHERAL_LINK_COUNT,
                                                    &ble_enable_params);
    GJ_CHECK_ERROR(err_code);

    // Check the ram settings against the used number of links
    CHECK_RAM_START_ADDR(CENTRAL_LINK_COUNT, PERIPHERAL_LINK_COUNT);

    // Enable BLE stack.
#if (NRF_SD_BLE_API_VERSION == 3) && false
    ble_enable_params.gatt_enable_params.att_mtu = NRF_BLE_MAX_MTU_SIZE;
#endif
    err_code = softdevice_enable(&ble_enable_params);
    GJ_CHECK_ERROR(err_code);

    // Register with the SoftDevice handler module for BLE events.
    err_code = softdevice_ble_evt_handler_set(OnBLEEvent);
    GJ_CHECK_ERROR(err_code);

#if defined(NRF_SDK12)
    // Overwrite existing sys handler if any
    g_sys_evt_handler = sys_evt_dispatch;
    err_code = softdevice_sys_evt_handler_set(g_sys_evt_handler);
    GJ_CHECK_ERROR(err_code);
#endif

    ble_gap_conn_params_t   gap_conn_params;
    ble_gap_conn_sec_mode_t sec_mode;

    BLE_GAP_CONN_SEC_MODE_SET_OPEN(&sec_mode);

    err_code = sd_ble_gap_device_name_set(&sec_mode,
                                          (const uint8_t *)m_hostname.c_str(),
                                          m_hostname.size());
    GJ_CHECK_ERROR(err_code);

    memset(&gap_conn_params, 0, sizeof(gap_conn_params));

    gap_conn_params.min_conn_interval = MIN_CONN_INTERVAL;
    gap_conn_params.max_conn_interval = MAX_CONN_INTERVAL;
    gap_conn_params.slave_latency     = SLAVE_LATENCY;
    gap_conn_params.conn_sup_timeout  = CONN_SUP_TIMEOUT;

    err_code = sd_ble_gap_ppcp_set(&gap_conn_params);
    GJ_CHECK_ERROR(err_code);

    m_adv_uuids[0] = {GATTS_SERVICE_UUID_TEST_A, BLE_UUID_TYPE_BLE};
    m_adv_uuids[1] = {GATTS_SERVICE_UUID_TEST_B, BLE_UUID_TYPE_BLE}; 

    //uint8_t addl_adv_manuf_data[] = {0x02, 0x01, 0x06, 0x02, 0x0a, 0x03, 0x08, 0xFF, 0x11, 0x00, 0x01, 0x02, 0x03, 0x04, 0x05};   
    
    //SetAdvManufData(addl_adv_manuf_data, sizeof(addl_adv_manuf_data));

    
    
    SetupAdvertising(addl_adv_manuf_data, sizeof(addl_adv_manuf_data));
    SetAdvManufData(addl_adv_manuf_data, sizeof(addl_adv_manuf_data));

    err_code = sd_ble_gatts_service_add(BLE_GATTS_SRVC_TYPE_PRIMARY, &m_adv_uuids[0], &m_service_handle[0]);
    GJ_CHECK_ERROR(err_code);

    CreateChar(m_service_handle[0], GATTS_CHAR_UUID_TEST_A, m_char_handle[0]);

    err_code = sd_ble_gatts_service_add(BLE_GATTS_SRVC_TYPE_PRIMARY, &m_adv_uuids[1], &m_service_handle[1]);
    GJ_CHECK_ERROR(err_code);
   
    CreateChar(m_service_handle[1], GATTS_CHAR_UUID_TEST_B, m_char_handle[1]);

    conn_params_init();

    
#if defined(NRF_SDK12)
    err_code = ble_advertising_start(BLE_ADV_MODE_FAST);
    APP_ERROR_CHECK(err_code);
#elif defined(NRF_SDK17)
    err_code = ble_advertising_start(&m_advertising, BLE_ADV_MODE_FAST);
    APP_ERROR_CHECK(err_code);
#endif

    //uint8_t addl_adv_manuf_data[] = {0x04, 0xFF, 0x11, 0x12, 0x13};   
    //SetAdvManufData(addl_adv_manuf_data, sizeof(addl_adv_manuf_data));

    ms_instance = this;
    
    m_init = true;
  }

  BLE_DBG_PRINT(3, "BLE Server initialized\n");

  ble_gap_addr_t localAddr;
  #if defined(S130)
    sd_ble_gap_address_get(&localAddr);
  #elif defined(S132)
    sd_ble_gap_addr_get(&localAddr);
  #endif

  SER("BLE addr %02X:%02X:%02X:%02X:%02X:%02X\n\r", localAddr.addr[0], localAddr.addr[1], localAddr.addr[2],
    localAddr.addr[3], localAddr.addr[4], localAddr.addr[5]);

  return m_init;
}

void GJBLEServer::Term()
{
  if (m_terminalIndex != -1)
  {
    RemoveTerminalHandler(m_terminalIndex);
    m_terminalIndex = -1;
    LOG("BLE server terminal handler removed\n\r");
  }

  Clients clients = std::move(m_clients);
  while(!clients.empty())
  {
    BLEClient *client = clients[0];
    clients.erase(clients.begin());
    client->Disconnect();
    delete client;
  }
  
  while(!m_dataBuffers.empty())
  {
    DataBuffer *dataBuffer = m_dataBuffers.front();
    m_dataBuffers.erase(m_dataBuffers.begin());
    delete dataBuffer;
  }

  m_commands.shrink_to_fit();

  if (m_init)
  {    
    sd_ble_gap_adv_stop();

  
    softdevice_handler_sd_disable();

    m_init = false;
  }

  LOG("BLE server terminated\n\r");
}

void GJBLEServer::SendHelp(BLEClient &client, uint16_t gatts_if, uint16_t descr_handle)
{
  LogRam();

  SER("Running partition %d\n\r", GetPartitionIndex());

  SendHelpCommand *helpCommand = new SendHelpCommand;

  helpCommand->client = &client;
  EventManager::Function func = std::bind(SendNextHelpCommand, helpCommand);
  GJEventManager->Add(func);
}

bool GJBLEServer::Broadcast(const char *text)
{
  //don't buffer pre connection broadcasts, takes too much ram
  if (m_clients.empty())
    return false;

  GJ_DEBUGLOC("GJBLEServer::Broadcast");

  GJ_PROFILE(GJBLEServer::Broadcast);

  //GJString string(text);

  //string = CleanupText(string.c_str());

  uint32_t stringSize = strlen(text);

  bool written(false);

  uint32_t mtu = 18;

  for (BLEClient *client : m_clients)
  {
    mtu = Min(mtu, client->GetMTU() - 5);
  }

  mtu = Max<uint32_t>(mtu, 16);

  uint32_t offset = 0;
  uint32_t maxSize = mtu;
  while(offset < stringSize)
  {
    uint32_t len = Min<uint32_t>(stringSize - offset, maxSize);

    char lastChar = text[offset + len - 1];
    char nextChar = text[offset + len];

    if (lastChar == '\n' && nextChar == '\r' && len)
      len--;

    DataBuffer *dataBuffer = new DataBuffer(text + offset, len);

    ReplaceLFCR((char*)dataBuffer->m_data.data(), len, ' ');
    ReplaceNonPrint((char*)dataBuffer->m_data.data(), len, ' ');

    AddDataBuffer(dataBuffer);

    offset += len;
  }

  return written;
}

void GJBLEServer::Update()
{
  GJ_PROFILE(GJBLEServer::Update);

  GJ_DEBUGLOC("BLE Update");

  //the BLE events are not processed during the IRQ but deferred to here
  intern_softdevice_events_execute();

  if (HasClient())
  {
    //printf(" ");
  }

  while(!m_dataBuffers.empty())
  {
    DataBuffer *dataBuffer;

    {
      GJScopedLock lock(m_lock);

      if (m_dataBuffers.empty())
        break;

      dataBuffer = m_dataBuffers.front();
    }

    bool ret = BroadcastData(dataBuffer);
    if (ret)
    {
      delete dataBuffer;

      GJScopedLock lock(m_lock);
      m_dataBuffers.erase(m_dataBuffers.begin());
      
      if (m_dataBuffers.empty())
        m_dataBuffers.shrink_to_fit();
    }
    else
      break;
  }

  while(!m_commands.empty())
  {
    Command *command;

    {
      GJScopedLock lock(m_lock);
      if (m_commands.empty())
        break;

      command = m_commands.front();
      m_commands.erase(m_commands.begin());
      if (m_commands.empty())
        m_commands.shrink_to_fit();
    }

    InterpretCommand(command->m_string.c_str(),command->m_string.size(), command->m_client); 
    delete command;
  }
}
