==> nonameforgood/gj/src/gj/gjbleserver.cpp <==
#include "gjbleserver.h"
#include "gj/esputils.h"
#include "gj/serial.h"
#include "gj/commands.h"
#include "gj/config.h"
#include "gj/eventmanager.h"
#include "gj/datetime.h"
#include "gj/gjota.h"
#include "esp_log.h"
#include "nvs_flash.h"
#include "esp_bt.h"
#include "esp_bt_defs.h"
#include "esp_bt_main.h"
#include "esp_gattc_api.h"
#include "esp_gatt_common_api.h"
#include <esp32-hal-bt.h>
#define BS_LOG_ON_ERR(r, ...) if (r < 0) {LOG(__VA_ARGS__);}
#define BLE_SER(lvl, ...) { if ( GJ_CONF_INT32_VALUE(ble.dbglvl) >= lvl) printf(__VA_ARGS__); }

void GJBLEServer::RegisterTerminalHandler()
{
  if (m_terminalIndex == -1)
  {
    auto handleTerminal = [&](const char *text)
    {
      if (!m_pendingSerial)
        m_pendingSerial = new SPendingSerial;

      uint32_t length = strlen(text);

      if (m_pendingSerial->m_length + length < SPendingSerial::MaxLength)
      {
        strcpy(m_pendingSerial->m_buffer + m_pendingSerial->m_length, text);
        m_pendingSerial->m_length += length;
      }

      //if (HasClient())
      //{
      //  if (BroadcastText(m_pendingSerial->m_buffer))
      //    m_pendingSerial->m_length = 0;
      //}
    };
    
    m_terminalIndex = AddTerminalHandler(handleTerminal);
  }
}

bool GJBLEServer::Init(const char *hostname, GJOTA *ota)
{
  m_hostname = hostname;
  m_ota = ota;
  
  return Init();
}

bool GJBLEServer::Init()
{
  if (!m_init)
  {
    gl_profile_tab = new gatts_profile_inst[2];

    gl_profile_tab[PROFILE_A_APP_ID].gatts_if = ESP_GATT_IF_NONE;       /* Not get the gatt_if, so initial is ESP_GATT_IF_NONE */
    gl_profile_tab[PROFILE_A_APP_ID].service_id.is_primary = true;
    gl_profile_tab[PROFILE_A_APP_ID].service_id.id.inst_id = 0x00;
    gl_profile_tab[PROFILE_A_APP_ID].service_id.id.uuid.len = ESP_UUID_LEN_16;
    gl_profile_tab[PROFILE_A_APP_ID].service_id.id.uuid.uuid.uuid16 = GATTS_SERVICE_UUID_TEST_A;
    gl_profile_tab[PROFILE_A_APP_ID].char_uuid.len = ESP_UUID_LEN_16;
    gl_profile_tab[PROFILE_A_APP_ID].char_uuid.uuid.uuid16 = GATTS_CHAR_UUID_TEST_A;
    gl_profile_tab[PROFILE_A_APP_ID].numHandle = GATTS_NUM_HANDLE_TEST_A;

    gl_profile_tab[PROFILE_B_APP_ID].gatts_if = ESP_GATT_IF_NONE;       /* Not get the gatt_if, so initial is ESP_GATT_IF_NONE */
    gl_profile_tab[PROFILE_B_APP_ID].service_id.is_primary = true;
    gl_profile_tab[PROFILE_B_APP_ID].service_id.id.inst_id = 0x00;
    gl_profile_tab[PROFILE_B_APP_ID].service_id.id.uuid.len = ESP_UUID_LEN_16;
    gl_profile_tab[PROFILE_B_APP_ID].service_id.id.uuid.uuid.uuid16 = GATTS_SERVICE_UUID_TEST_B;
    gl_profile_tab[PROFILE_B_APP_ID].char_uuid.len = ESP_UUID_LEN_16;
    gl_profile_tab[PROFILE_B_APP_ID].char_uuid.uuid.uuid16 = GATTS_CHAR_UUID_TEST_B;
    gl_profile_tab[PROFILE_B_APP_ID].numHandle = GATTS_NUM_HANDLE_TEST_B;

    // Initialize NVS.
    esp_err_t ret = nvs_flash_init();
    if (ret == ESP_ERR_NVS_NO_FREE_PAGES || ret == ESP_ERR_NVS_NEW_VERSION_FOUND) {
        ESP_ERROR_CHECK(nvs_flash_erase());
        ret = nvs_flash_init();
    }
    ESP_ERROR_CHECK( ret );

    btStart();

    BLE_CALL(esp_ble_tx_power_set(ESP_BLE_PWR_TYPE_CONN_HDL0, ESP_PWR_LVL_P9));
    BLE_CALL(esp_ble_tx_power_set(ESP_BLE_PWR_TYPE_ADV, ESP_PWR_LVL_P9));
    BLE_CALL(esp_ble_tx_power_set(ESP_BLE_PWR_TYPE_DEFAULT, ESP_PWR_LVL_P9));
    BLE_CALL(esp_bredr_tx_power_set(ESP_PWR_LVL_P9, ESP_PWR_LVL_P9));

    BLE_CALL(esp_bluedroid_init(), return false);
    BLE_CALL(esp_bluedroid_enable(), return false);
    BLE_CALL(esp_ble_gatts_register_callback(gatts_event_handler), return false);
    BLE_CALL(esp_ble_gap_register_callback(gap_event_handler), return false);
    BLE_CALL(esp_ble_gatts_app_register(PROFILE_A_APP_ID), return false);
    BLE_CALL(esp_ble_gatts_app_register(PROFILE_B_APP_ID), return false);
    BLE_CALL(esp_ble_gatt_set_local_mtu(500));

    ms_instance = this;
    
    m_init = true;
  }

  RegisterTerminalHandler();

  if (!m_oneTimeInit)
  {
    m_oneTimeInit = true;

    auto exitCB = [this]()
    {
      if (ms_instance)
        ms_instance->Term();
    };

    RegisterExitCallback(exitCB);

    auto broadWSLog = [=](const char *buffer)
    {
      this->Broadcast(buffer);
    };

    auto sendWBLog = [=]()
    {
      SendRecentLog(broadWSLog);
    };

    REGISTER_COMMAND("blesendlog", sendWBLog);

    REGISTER_COMMAND("bledbg", [this](){
      uint32_t clientCount = m_clients.size();
      SER("BLE clients:%d\n\r", clientCount);
      for (BLEClient const *client : m_clients)
      {
        SER("  conn:%02d mtu:%03d bda:%02x:%02x:%02x:%02x:%02x:%02x ref:%02d\n\r", 
          client->GetConnId(),
          client->GetMTU(),
          client->GetBDA()[0], client->GetBDA()[1], client->GetBDA()[2], client->GetBDA()[3], client->GetBDA()[4], client->GetBDA()[5],
          client->GetRef()
          );
      }
    });


    REGISTER_COMMAND("bleon", [this](){
      if (!ms_instance)
        this->Init();
    });


    REGISTER_COMMAND("bleoff", [](){
      if (ms_instance)
        ms_instance->Term();
    });
  }

  return m_init;
}

void GJBLEServer::Term()
{
  if (m_terminalIndex != -1)
  {
    RemoveTerminalHandler(m_terminalIndex);
    m_terminalIndex = -1;
    LOG("WSS terminal handler removed\n\r");
  }

  Clients clients = std::move(m_clients);
  while(!clients.empty())
  {
    BLEClient *client = clients[0];
    clients.erase(clients.begin());
    delete client;
  }

  if (m_init)
  {
    ms_instance = nullptr;

    esp_err_t ret;
    
    ret = esp_ble_gatts_app_unregister(gl_profile_tab[0].gatts_if);
    if (ret != ESP_OK) {
      GJ_ERROR("esp_ble_gatts_app_unregister(0) failed: %s\n", esp_err_to_name(ret));
    }

    ret = esp_ble_gatts_app_unregister(gl_profile_tab[1].gatts_if);
    if (ret != ESP_OK) {
      GJ_ERROR("esp_ble_gatts_app_unregister(1) failed: %s\n", esp_err_to_name(ret));
    }

    ret = esp_bluedroid_disable();
    if (ret != ESP_OK) {
      GJ_ERROR("esp_bluedroid_disable failed: %s\n", esp_err_to_name(ret));
    }
    ret = esp_bluedroid_deinit();
    if (ret != ESP_OK) {
      GJ_ERROR("esp_bluedroid_deinit failed: %s\n", esp_err_to_name(ret));
    }

    if (!btStop())
    {
      GJ_ERROR("btStop failed\n");
    }

    delete [] gl_profile_tab;
    gl_profile_tab = nullptr;

    m_init = false;
  }

  LOG("WSS terminated\n\r");
}

void GJBLEServer::OnNewClient(BLEClient *client)
{
  {
    unsigned char data[256];

    for (int i = 0 ; i < 256 ; ++i)
      data[i] = (uint8_t)i;

    uint32_t crc = ComputeCrcDebug(data, 256);
    uint32_t crc2 = ComputeCrcDebug(data, 128);
    crc2 = ComputeCrcDebug(&data[128], 128, crc2);
    BLE_SER(4, "test crc:%u crc2:%u\n", crc, crc2);
  }

  BLE_SER(4, "RAM avail:%dKB\n\r", heap_caps_get_free_size(MALLOC_CAP_8BIT) / 1024);

  //wait for headers
  SetDebugLoc("Waiting for headers\n\r");
  m_clients.push_back(client);  
}

void GJBLEServer::SendHelp(BLEClient &client, uint16_t gatts_if, uint16_t descr_handle)
{
  Vector<GJString> commands;
  GetCommands(commands);

  String output;// = *new String;
  //output += "ws_availablecommands:";
  for (String &str : commands)
  {
    if (!output.length())
      output += "ws_availablecommands:";

    uint32_t len = str.length() + 1;

    if ((output.length() + len) > 95)
    {
      printf("avail commands len:%d '%s'\n", output.length(), output.c_str());
      client.Indicate(gatts_if, descr_handle, output.c_str());

      output = "ws_availablecommands:";
    }

    output += str;
    output += ";";
  }

  if (output.length())
  {
    printf("avail commands len:%d '%s'\n", output.length(), output.c_str());
    client.Indicate(gatts_if, descr_handle, output.c_str());
  }
}

bool GJBLEServer::Broadcast(const char *text)
{
  if (m_clients.empty())
    return false;

  GJ_PROFILE(GJBLEServer::Broadcast);

  String string(text);

  string = CleanupText(string.c_str());

  bool written(false);

  uint32_t mtu = ESP_GATT_MAX_MTU_SIZE;

  for (BLEClient *client : m_clients)
  {
    mtu = std::min(mtu, client->GetMTU() - 5);
  }

  mtu = std::max<uint32_t>(mtu, 23);

  uint32_t offset = 0;
  uint32_t maxSize = mtu;
  while(offset < string.length())
  {
    uint32_t len = std::min<uint32_t>(string.length() - offset, maxSize);
    //GJString subStr(FormatString("'%.*s'", len, string.c_str() + offset));

    GJString subStr(string.c_str() + offset, len);


    //printf("b-----------------\n\r");
    //printf("'%s'\n", subStr.c_str());
    //printf("e-----------------\n\r");

    //printf("%s", dbg.c_str());
    //printf("%s", subStr.c_str());

    written |= BroadcastText(subStr.c_str());

    offset += len;
  }

  return written;
}

void GJBLEServer::Update()
{
  GJ_PROFILE(GJBLEServer::Update);

  SetDebugLoc("BLE Update");

  if (m_pendingSerial && m_pendingSerial->m_length)
  {
    if (Broadcast(m_pendingSerial->m_buffer))
      m_pendingSerial->m_length = 0;
  }

  for (GJString const &command : m_commands)
  {
    ::InterpretCommand(command.c_str()); 
  }

  m_commands.clear();

  SetDebugLoc("");
}
